[gd_scene load_steps=6 format=3 uid="uid://fkousx6tdb0y"]

[ext_resource type="Script" path="res://script/level_selection.gd" id="1_ckdcw"]
[ext_resource type="Texture2D" uid="uid://cy4vs47pxyol7" path="res://Asset Pack/template background 1.png" id="2_055nk"]
[ext_resource type="AudioStream" uid="uid://bsfggqd06bvkr" path="res://music/Local Forecast Elevator.mp3" id="2_b01fr"]
[ext_resource type="Theme" uid="uid://bq52vocemd2d3" path="res://Scenes/UI prefab.tres" id="6_ef5v4"]

[sub_resource type="Theme" id="Theme_ou0u7"]

[node name="levelSelection" type="Node2D"]
script = ExtResource("1_ckdcw")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_055nk")
stretch_mode = 1

[node name="testing" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 996.0
offset_top = 614.0
offset_right = 1096.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Yes, this is the test level"
mouse_default_cursor_shape = 2
text = "test level"
flat = true
icon_alignment = 1

[node name="Glow" type="Button" parent="."]
offset_left = 1107.0
offset_top = 617.0
offset_right = 1149.0
offset_bottom = 648.0
text = "OLD"
flat = true
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b01fr")
autoplay = true

[node name="Control" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_top = 17.0
offset_right = 40.0
offset_bottom = 57.0
theme = ExtResource("6_ef5v4")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 495.0
offset_top = 53.0
offset_right = 657.0
offset_bottom = 113.0
tooltip_text = "go back too main menu"
mouse_default_cursor_shape = 2
text = "To main menu"

[node name="To1" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 153.0
offset_top = 260.0
offset_right = 313.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Yes, this is level 1/tutorial"
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Level 1"

[node name="To2" type="Button" parent="Control"]
editor_description = "Yes, this is level 2"
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 457.0
offset_top = 240.0
offset_right = 657.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Yes, this is level 2"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Level 2"
language = "en"

[node name="To3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 803.0
offset_top = 260.0
offset_right = 963.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Yes, this is level 3"
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ou0u7")
theme_override_font_sizes/font_size = 25
text = "Level 3"

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 480.0
offset_top = 167.0
offset_right = 673.0
offset_bottom = 221.0
bbcode_enabled = true
text = "[center]you can press 'Q' to go 
back too selection menu[/center]"
scroll_active = false

[connection signal="pressed" from="testing" to="." method="_on_testing_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/To1" to="." method="_on_to_1_pressed"]
[connection signal="pressed" from="Control/To2" to="." method="_on_to_2_pressed"]
[connection signal="pressed" from="Control/To3" to="." method="_on_to_3_pressed"]
